# Uni

./: .gitignore  README.md
Bash/: find_non_ocr_pdfs.sh
C++/: BigInt.cpp~  BigInt.h~  Fahrenheit.C~  My3Vector.cpp~  My3Vector.h~  My3Vektor.cpp~  My3Vektor.h~  MyLVektor.cpp~  MyLVektor.h~  Ramkurve.cpp  STL_find.cpp~  StatCalc.cpp~  a15.c~  arrays.c~  b01.c~  b03.c~  b05c.cpp~  b06a.cpp~  b07.cpp~  b09.cpp~  c01.cpp~  ckurs10.c~  empty.dat~  fakultät.c~  floating.c~  identity.c~  infinity.c~  integer.c~  klausur.cpp~  numbers.dat~  pointer.c~  prim_kleiner.c~  prim_kleiner_2.c~  prim_kleiner_3.c~  prim_kleiner_4.cpp~  prim_test.c~  quadrat.c~
C++/Anfänger/: BigInt.cpp  BigInt.h  Fahrenheit  Fahrenheit.C  Hello  Hello.C  My3Vector.cpp  My3Vector.h  My3Vektor.h  MyLVektor.cpp  MyLVektor.h  Quelle.cpp  STL_find  STL_find.cpp  StatCalc  StatCalc.cpp  T3Vektor  T3Vektor.cpp  a15  a15.c  arrays  arrays.c  b01  b01.c  b03  b03.c  b05c  b05c.cpp  b06a  b06a.cpp  b07.cpp  b09  b09.cpp  c01  c01.cpp  ckurs10  (+29 more)
C++/Programmiertechniken/Klausur/src/: Makefile.am  Makefile.in  main  main.cpp
C++/Programmiertechniken/Vorlesungsbeispiele/prog_cmake/Ver3/src/: CMakeLists.txt  cmpl.h
C++/Programmiertechniken/prog_cmake/Ver4/src/: CMakeLists.txt
Python/: sql.py
Software-Handwerkszeug/: Collatz_Vermutung.py  Datenanalyse.py  Eintraege.sh  Fibonacci.py  Hello_World.sh  Kant.sh  Kanttest.txt  Lineare_Algebra.py  Markus_im_CIP.sh  SGE-qstat-parse.py  SQlite.sqlite3  Students.schema  Students.sqlite3  Zeilen_zaehlen.py  data.pickle  findprimes.py  findprimes.sh  genom.txt  genom_anzahl.sh  myjob.sh  myobj.pickle  pickle.py  primzahl.sh  product.xml  sql.py  xml-val.py
(+713 files in other folders)
