## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = klausur

klausur_SOURCES = \
	main.cc

klausur_LDFLAGS = 

klausur_LDADD = 


if NATIVE_WIN32
klausur_LDFLAGS += -mwindows
endif
